# rCore

./: README.md
os/: Cargo.toml  makefile
os/src/: batch.rs  config.rs  entry.asm  lang_items.rs  link_app.S  linker.ld  loader.rs  log.rs  logging.rs  main.rs  sbi.rs  timer.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
tests/1/: 03sleep.rs
tests/2/: 01store_fault.rs  test1_write0.rs
user/: Cargo.toml  build.py
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  sbi.rs  syscall.rs
